# generalizable-brain-extraction

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
nibrex/: __init__.py  conftest.py
nibrex/cli/: brainextraction.py
