[metadata]
url = https://github.com/nipreps/nibrex
author = The NiPreps Developers
author_email = nipreps@gmail.com
maintainer = Eilidh MacNicol
maintainer_email = nipreps@gmail.com
description = NiBrEx (NeuroImaging Brain Extraction) - A generalizable brain extraction tool derived from antsBrainExtraction
long_description = file:README.md
long_description_content_type = text/x-rst; charset=UTF-8
license = 3-clause BSD
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Recognition
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >= 3.8
install_requires =
    attrs
    nibabel >= 3.0.1
    nipype ~= 1.5.1
    niworkflows ~= 1.4.0
    templateflow 

test_requires =
    coverage < 5
    pytest >= 4.4
    pytest-cov
    pytest-xdist >= 1.28, <2.0
packages = find:

[options.entry_points]
console_scripts =
    nibrex=nibrex.cli.brainextraction:main

[options.package_data]
nibrex =
    data/*.json

[options.packages.find]
exclude =
    *.tests

[options.extras_require]
doc =
    pydot >= 1.2.3
    pydotplus
    sphinx >= 2.1.2
    sphinx_rtd_theme
    sphinxcontrib-apidoc ~= 0.3.0
    sphinxcontrib-napoleon
    sphinxcontrib-versioning
docs =
    %(doc)s
duecredit =
    duecredit
style =
    flake8 >= 3.7.0
test =
    coverage < 5
    pytest >= 4.4
    pytest-cov
    pytest-xdist >= 1.28
tests =
    %(test)s
all =
    %(doc)s
    %(duecredit)s
    %(style)s
    %(test)s

[flake8]
max-line-length = 99
doctests = False
ignore =
    W503
    E203
exclude=*build/

